fixed navbar spacing

--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -10,7 +10,7 @@
     }
 
     h1 {
-        margin: 0;
+        margin: 0 1rem 0 2rem;
     }
 }
 
